--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Under Construction!</h1>
+<h1>This site is under construction! Feel free to sing the doom song while you wait for it to come online.</h1>
